--- a/package.json
+++ b/package.json
@@ -16,29 +16,32 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
     "babel-plugin-styled-components": "^2.0.7",
-    "gatsby": "^4.15.2",
+    "gatsby": "^4.16.0",
     "gatsby-plugin-image": "^2.16.1",
     "gatsby-plugin-manifest": "^4.16.0",
-    "gatsby-plugin-mdx": "^3.16.0",
     "gatsby-plugin-react-helmet": "^5.16.0",
     "gatsby-plugin-sharp": "^4.16.1",
     "gatsby-plugin-sitemap": "^5.16.0",
     "gatsby-plugin-styled-components": "^5.16.0",
+    "gatsby-plugin-vercel": "^1.0.3",
     "gatsby-source-contentful": "^7.14.0",
     "gatsby-source-filesystem": "^4.16.0",
+    "gatsby-transformer-remark": "^5.16.0",
     "gatsby-transformer-sharp": "^4.16.0",
+    "mixpanel-browser": "^2.45.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
+    "@types/mixpanel-browser": "^2.38.0",
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "typescript": "^4.7.2"
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.25",
+    "typescript": "^4.7.3"
   }
 }
